Fixed colour contrast for text

--- a/src/style.css
+++ b/src/style.css
@@ -9,3 +9,9 @@
 .tippy-box[data-animation='chapter-menu'][data-placement^=right] > .tippy-backdrop {
     transform-origin: 50% 0 !important;
 }
+
+@layer base {
+    input[type='text'] {
+    @apply placeholder-gray-600;
+  }
+}
